kubernetes/infra/network/vpn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wireguard
  labels:
    name: wireguard
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
