kubernetes/infra/network/vpn/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wireguard
  strategy:
    # Restrict to a Single wg-easy instance, on redeploys it will tear down the old one before bring a new one up.
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wireguard
    spec:
      containers:
        - name: wireguard
          image: ghcr.io/wg-easy/wg-easy:15.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 30000
              name: wg
              protocol: UDP
            - containerPort: 51821
              name: http
              protocol: TCP
          # Use the http server for pod health checks
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          # Give pod permissions to modify network and load wireguard module
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          # Persistent storage location
          volumeMounts:
            - mountPath: /opt/wg-hooks-bin
              name: wg-hooks-bin
            - mountPath: /etc/wireguard
              name: config
      restartPolicy: Always
      volumes:
        - name: wg-easy-defaults
          configMap:
            name: wireguard-global-config
        - name: wg-hooks-bin
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: wireguard-pvc
