kubernetes/infra/network/vpn/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
spec:
  type: NodePort
  ports:
    - name: wg
      port: 30000
      nodePort: 30000
      protocol: UDP
      targetPort: wg
  selector:
    app.kubernetes.io/name: wireguard
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-http
  namespace: wireguard
spec:
  ports:
    - name: http
      port: 51821
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: wireguard
  type: ClusterIP
