kubernetes/infra/network/vpn/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wireguard-ui
  namespace: wireguard
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - vpn.${cluster_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
          weight: 1
